--- a/excercise folder/09-geometries/package.json
+++ b/excercise folder/09-geometries/package.json
@@ -14,6 +14,7 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0-alpha.7",
     "mini-css-extract-plugin": "^1.3.5",
+    "parse-path": "^4.0.3",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
     "style-loader": "^2.0.0",
