--- a/excercise folder/09-geometries/package.json
+++ b/excercise folder/09-geometries/package.json
@@ -15,6 +15,7 @@
     "html-webpack-plugin": "^5.0.0-alpha.7",
     "mini-css-extract-plugin": "^1.3.5",
     "parse-path": "^4.0.3",
+    "path-parse": "^1.0.7",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
     "style-loader": "^2.0.0",
